<?xml version="1.0" encoding="utf-8"?>
<!-- 
/**
 * Copyright (c) 2012 Vinayak Solutions Private Limited 
 * See the file license.txt for copying permission.
*/     
 -->
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
  	android:paddingLeft="10dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    >
        
    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/delete_dialog_text"
        android:id="@+id/dialog_message"
        android:textSize="16sp"
        android:textStyle="bold" />
    
    <CheckBox 
        android:layout_below="@id/dialog_message"
        android:id="@+id/disable_delete_dialog_checkbox"
        android:checked="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/delete_dialog_title" 
        android:textSize="14sp" />
    
    <LinearLayout
        android:layout_below="@id/disable_delete_dialog_checkbox"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="center"
        >
        
        <Button 
            android:id="@+id/delete_dialog_ok"
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"/>
        
        <Button 
            android:id="@+id/delete_dialog_cancel"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
        
    </LinearLayout>
</RelativeLayout>