<?xml version="1.0" encoding="utf-8"?>
<!-- 
/**
 * Copyright (c) 2012 Vinayak Solutions Private Limited 
 * See the file license.txt for copying permission.
*/     
 -->
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/home_bg"
    >
    <!-- Header -->
    <include
        layout="@layout/simple_header"
        android:id="@+id/include_header"/>
    
    <!-- Date Bar -->
    <LinearLayout  
        android:id="@+id/edit_date_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/include_header"
        android:background="@drawable/date_bar_bg_wo_shadow"
        android:gravity="center"
        android:orientation="horizontal"
        >
        
        <ImageButton
            android:id="@+id/edit_date_bar_previous_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/previous_arrow_states" />
        
        <TextView
            android:id="@+id/edit_date_bar_dateview"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="17dip"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="1dip" />
        
        <ImageButton
            android:id="@+id/edit_date_bar_next_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/next_arrow_states" />
        
    </LinearLayout>
    
    <TextView 
	    android:id="@+id/edit_location_time"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:background="@drawable/notification_bg"
	    android:textColor="@color/white"
	    android:textStyle="bold"
	    android:gravity="center_vertical"
	    android:paddingLeft="7dip"
	    android:layout_below="@id/edit_date_bar"
	    android:visibility="gone" />
        
    <!-- ScrollView for body -->
    <ScrollView
        android:id="@+id/edit_body"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/edit_footer"
        android:layout_below="@id/edit_location_time"
        >
        
        <!-- Layout because Scroll View can contain only single child -->
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            
            <!-- Camera Entry View -->
            <LinearLayout
                android:id="@+id/edit_camera_details"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/dialog_bg"
                android:gravity="center"
                android:visibility="gone"
                >
                
                <ImageView 
                    android:id="@+id/edit_image_display"
                    android:layout_width="111dp"
                    android:layout_height="84dp"
                    android:background="@drawable/photo_frame"
                    android:layout_marginRight="10dp"
                    android:paddingTop="2dp"
                   	android:paddingLeft="2.5dp"
                   	android:paddingRight="2.5dp"
                   	android:paddingBottom="3dp"
                   	android:scaleType="fitXY" />
                
                <RelativeLayout 
                    android:id="@+id/edit_load_progress"
                    android:layout_width="111dp"
                    android:layout_height="84dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                   	android:visibility="gone"
                   	>
                   	
                	<ProgressBar 
                	    android:layout_height="wrap_content"
                	    android:layout_width="wrap_content" />
                	
                </RelativeLayout>
                
                <Button
                    android:id="@+id/edit_retake_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/retake_states"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>
			
            <!-- Voice Entry View -->   
            <RelativeLayout
                android:id="@+id/edit_voice_details"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dialog_bg"
                android:layout_gravity="center"
                android:visibility="gone"
                >
              	<Chronometer 
              		android:id="@+id/edit_time_details_chronometer"
                  	android:layout_width="fill_parent"
                  	android:layout_height="wrap_content"
                  	android:textSize="36sp"
                  	android:textStyle="bold"
                  	android:gravity="center_horizontal"
                  	android:textColor="@color/black"
                  	android:layout_marginTop="5dip" />
                
                <LinearLayout
                    android:id="@+id/edit_voice_control_buttons"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dip"
                    android:layout_below="@id/edit_time_details_chronometer"
                    >
                    <!-- stop button -->
                    <Button
                        android:id="@+id/edit_stop_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/voice_stop_states"
                        android:layout_marginLeft="5dip"
                        android:layout_marginRight="5dip" />
                    
                    <!-- play button -->    
                    <Button
                        android:id="@+id/edit_play_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/voice_play_states"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:visibility="gone" />
                    
                    <!-- rerecord button -->    
                    <Button
                        android:id="@+id/edit_rerecord_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/voice_rerecord_states"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:visibility="gone" />
                </LinearLayout>
            </RelativeLayout>
            
	        <!-- Common Text Entry fields -->
	        <!-- amount -->
	        <EditText 
	            android:id="@+id/edit_amount"
	            android:imeOptions="actionNext"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/amount"
	            android:inputType="numberDecimal"
	            android:layout_marginTop="7dip"
	            android:layout_marginLeft="7dp"
            	android:layout_marginRight="7dp" />
	        <!-- description -->
	        <EditText 
	            android:id="@+id/edit_tag"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:minLines="4"
	            android:gravity="top"
	            android:layout_marginTop="7dp"
	            android:layout_marginRight="7dp"
            	android:layout_marginLeft="7dp"
            	android:hint="@string/description" />
	        
	        <include 
	            layout="@layout/favorite"/>
        </LinearLayout>	
    </ScrollView>
    
    <!-- Body for favorite entry -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/edit_footer"
        android:layout_below="@+id/edit_date_bar"
        android:background="@color/white"
        android:visibility="gone"
        android:id="@+id/edit_body_favorite"
        android:orientation="vertical"
        >
        
        <EditText 
            android:id="@+id/favorite_search"
            android:hint="@string/search"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:visibility="gone" />
        
        <TextView 
            android:id="@+id/edit_body_favorite_tag"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="@drawable/notification_bg"
            android:text="@string/favorite_selection_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:paddingLeft="7dip" />
                
        <ListView 
            android:id="@+id/edit_body_favorite_listview"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:cacheColorHint="@android:color/transparent" 
            android:divider="@drawable/list_divider"
            android:footerDividersEnabled="false" />
        
        <ImageView
            android:background="@drawable/list_divider"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"/>
        
    </LinearLayout>
        
    <!-- Footer -->
    <LinearLayout
        android:id="@id/edit_footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_bar_bg"
        android:gravity="center"
        android:paddingLeft="7dip"
        android:paddingRight="7dip"
        >

        <Button
            android:id="@+id/edit_save_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/save_entry_states"
            android:layout_marginRight="5dp" />
        
        <Button
            android:id="@+id/edit_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/delete_states"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

</RelativeLayout>